--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+
+h1{
+    font-size: 50px;
+}
+
+span{
+    color: orange;
+}
+
+span:hover{
+    color: orangered;
+}
