--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ span:hover{
     color: orangered;
 }
 
-section{
+.container{
     display: flex;
     margin: 0px;
 }
@@ -76,3 +76,23 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+
+#third{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.h2{
+    font-size: 40px;
+    font-weight: 800;
+}
+
+ .x-area{
+     width: 40%;
+     margin-left: 5%;
+     margin-right: 5%;
+     padding-left: 5px;
+     border-radius: 10px;
+     box-shadow: 10px 10px 40px gray;
+ }
+ 
